--- a/css/style.css
+++ b/css/style.css
@@ -4,17 +4,37 @@
     box-sizing: border-box;
 }
 
+.logo {
+    width: 25em;
+    margin-left: 32%;
+    padding: 2rem;
+    
+}
+
+.cuadrado{
+    position: absolute;
+    margin-top: -17rem;
+    width: 100%;
+    height: 31rem;
+    background-color: rgba(5, 26, 119, 0);
+    border-bottom: .3px solid rgba(2, 4, 99, 0.795);
+  }
+
+
 .main {
     height: 140rem;
-    background-color: rgba(72, 127, 247, 0.5);
+    background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
 }
 
 .titulo {
-    padding: 2rem;
+    margin-top: 5rem;
+    margin-left: 2rem;
+    margin-bottom: 3rem;
+    color: black; text-shadow: rgba(255, 255, 255, 0.336) -0.1em 0.1em 0.5em;
 }
 
 .formulario_enviar {
-    background-color: rgb(145, 169, 236);
+    background-color: rgba(145, 169, 236, 0.151);
     padding: 2rem;
     margin: 2rem;
     
